--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 
     <h1>tabacaria deoland</h1>
- <p>essência 5 reais carvão 10 centavos
-    jack daniels 50RS
-    red label 25RS
-    black label 30RS
-    green label 120 R
-    royal salute 500RS</p>   
+ <p>essência 5 reais carvão 10 centavos</p> 
+    <p>jack daniels 50RS</p>
+    <p>red label 25RS</p>
+    <p>black label 30RS</p>
+    <p>green label 120 R</p>
+   <p>royal salute 500RS</p>   
    
 </body>
 
