--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <p>red label 25RS</p>
     <p>black label 30RS</p>
     <p>green label 120 R</p>
-   <p>royal salute 500RS</p>   
+   <p>royal salute 500RS</p> 
+    <p>blue label 200RS</p>
+    <p>absolut vodka 25RS</p>
+    <p>askov (vodka de sabor)5RS</p>
    
 </body>
 
