--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <h1>tabacaria deoland</h1>
+    <h1><stron>tabacaria deoland</stron> </h1>
  <p>essência 5 reais carvão 10 centavos</p> 
     <p>jack daniels 50RS</p>
     <p>red label 25RS</p>
