--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <p>blue label 200RS</p>
     <p>absolut vodka 25RS</p>
     <p>askov (vodka de sabor)5RS</p>
-   
+   <p>narguile completo(todas as cores)100RS</p>
+   <p>white horse (cavalo branco)40RS</p>
+   <p>prato separado de narguile (todas as cores e modelos)20RS</p>
+   <p>mangueira de narguile (todas as cores e modelos)15RS</p>
+   <p>rosh de narguile (todos os modelos e cores)20RS</p>
 </body>
 
 </html>
