--- a/index.html
+++ b/index.html
@@ -6,26 +6,40 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>deolands beers (tabacria e utilitarios)</title>
     <link rel="stylesheet" href="style.css">
+
+<style>
+p{
+
+text-align: center 
+
+}
+
+</style>
+
+
 </head>
 
 <body>
 
 
-    <h1><stron>tabacaria deoland</stron> </h1>
+    <h style="text-align:center"><stron>tabacaria deoland</stron> </h1>
  <p>essência 5 reais carvão 10 centavos</p> 
     <p>jack daniels 50RS</p>
     <p>red label 25RS</p>
     <p>black label 30RS</p>
-    <p>green label 120 R</p>
+    <p>green label 120 RS</p>
    <p>royal salute 500RS</p> 
     <p>blue label 200RS</p>
     <p>absolut vodka 25RS</p>
     <p>askov (vodka de sabor)5RS</p>
-   <p>narguile completo(todas as cores)100RS</p>
-   <p>white horse (cavalo branco)40RS</p>
+   <p>narguile completo(todas as cores) 100RS</p>
+   <p>white horse (cavalo branco) 40RS</p>
    <p>prato separado de narguile (todas as cores e modelos)20RS</p>
    <p>mangueira de narguile (todas as cores e modelos)15RS</p>
    <p>rosh de narguile (todos os modelos e cores)20RS</p>
+   <P>vaso de narguile (todos os modelos e cores)40RS</P>
+   <p>steam (corpo do narguile) (todos os modelos e cores)50RS</p>
+   <p></p>
 </body>
 
 </html>
