--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@ text-align: center
    <p>rosh de narguile (todos os modelos e cores)20RS</p>
    <P>vaso de narguile (todos os modelos e cores)40RS</P>
    <p>steam (corpo do narguile) (todos os modelos e cores)50RS</p>
-   <p></p>
+   <p>cigarro de todas as marcas 5RS</p>
+   <p>juice (essencia de pod e vaper) 10RS</p>
+   <p>vaper sky solo plus 20RS</p>
+   <P>vaper vaporesso 50RS</P>
+   <p>pod descartavel 10RS</p>
+   <p>pod recarregavel 50RS</p>
+   <p>ice drink 1,25RS</p>
+   <p>balinha de troco 5C</p>
 </body>
 
 </html>
