--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ text-align: center
    <p>pod recarregavel 50RS</p>
    <p>ice drink 1,25RS</p>
    <p>balinha de troco 5C</p>
+   <p>dichavador 10RS</p>
+   <p>bong 20RS</p>
 </body>
 
 </html>
