--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ text-align: center
    <p>balinha de troco 5C</p>
    <p>dichavador 10RS</p>
    <p>bong 20RS</p>
+   <p>caixinha de seda (25 unidades) 5RS</p>
+   <p>zzz</p>
 </body>
 
 </html>
