--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ text-align: center
 <body>
 
 
-    <h style="text-align:center"><stron>tabacaria deoland</stron> </h1>
+    <h1 style="text-align:center"><strong>tabacaria deoland</strong> </h1>
  <p>essência 5 reais carvão 10 centavos</p> 
     <p>jack daniels 50RS</p>
     <p>red label 25RS</p>
