--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ text-align: center
    <p>dichavador 10RS</p>
    <p>bong 20RS</p>
    <p>caixinha de seda (25 unidades) 5RS</p>
-   <p></p>
+   <p>abafador para narguile 10RS</p>
+   <p>cerveja 2,50RS</p>
 </body>
 
 </html>
