--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ text-align: center
 </head>
 
 <body>
+
+<nav>
+
     <img src="https://cdn.sistemawbuy.com.br/arquivos/db815b94c9dba745fd44b473ba83d62d/produtos/ZEI1LOU2/vr-tabacaria-fachada-613a7fd5c2e79.jpg">
 
     <h1 style="text-align:center"><strong>tabacaria deoland</strong> </h1>
@@ -52,6 +55,9 @@ text-align: center
    <p>caixinha de seda (25 unidades) 5RS</p>
    <p>abafador para narguile 10RS</p>
    <p>cerveja 2,50RS</p>
+
+</nav>
+
 </body>
 
 </html>
