--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ text-align: center
    <p>dichavador 10RS</p>
    <p>bong 20RS</p>
    <p>caixinha de seda (25 unidades) 5RS</p>
+   <center><img src="https://images.tcdn.com.br/img/img_prod/553162/seda_smoking_brown_king_size_un_228_1_3f7755756927cd8a197868de731a2617.jpeg"</center>
    <p>abafador para narguile 10RS</p>
    <p>cerveja 2,50RS</p>
 
