--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ text-align: center
 
     <h1 style="text-align:center"><strong>tabacaria deoland</strong> </h1>
  <p>essência 5 reais carvão 10 centavos</p> 
+ <center><img src="https://cdn.shopify.com/s/files/1/0023/4094/5955/products/Picsart_22-08-19_19-19-36-581_580x.jpg?v=1660948204" </center>
     <p>jack daniels 50RS</p>
     <center><img src="https://http2.mlstatic.com/D_NQ_NP_635617-MLB44199468671_112020-O.jpg"</center>
     <p>red label 25RS</p>
