--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ text-align: center
 <body>
 
 <nav>
+    <div>
 
     <img  src="https://cdn.sistemawbuy.com.br/arquivos/db815b94c9dba745fd44b473ba83d62d/produtos/ZEI1LOU2/vr-tabacaria-fachada-613a7fd5c2e79.jpg">
 
@@ -35,6 +36,8 @@ text-align: center
     <p>black label 30RS</p>
     <center><img src="https://superadega.vteximg.com.br/arquivos/ids/171025-520-520/7142---Whisky-Johnnie-Walker-Black-Label-1L.jpg?v=637786263658700000" </center>
     <p>green label 120 RS</p>
+    <center><img src="
+
     <p>blue label 200RS</p>
     <p>absolut vodka 25RS</p>
     <p>askov (vodka de sabor)5RS</p>
@@ -60,7 +63,7 @@ text-align: center
    <p>abafador para narguile 10RS</p>
    <center><img src="https://s3-sa-east-1.amazonaws.com/files-sc.sigecloud.com.br/Producao/f7404744-0d9d-4b91-9b09-9d8e27c722fd/ImagensProdutos/61e6bebbfe1ad80900ac01ce_800x533.jpeg" </center>
    <p>cerveja 2,50RS</p>
-
+</div>
 </nav>
 
 </body>
