--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ text-align: center
 <nav>
     <div>
 
-    <img  src="https://cdn.sistemawbuy.com.br/arquivos/db815b94c9dba745fd44b473ba83d62d/produtos/ZEI1LOU2/vr-tabacaria-fachada-613a7fd5c2e79.jpg">
+    <img id="imagem-principal" src="https://cdn.sistemawbuy.com.br/arquivos/db815b94c9dba745fd44b473ba83d62d/produtos/ZEI1LOU2/vr-tabacaria-fachada-613a7fd5c2e79.jpg">
 
     <h1 style="text-align:center"><strong>tabacaria deoland</strong> </h1>
  <p>essência 5 reais carvão 10 centavos</p> 
