--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ text-align: center
     <p>blue label 200RS</p>
     <center><img src="https://images-americanas.b2w.io/produtos/01/00/item/5829/3/5829305_1GG.jpg" </center>
     <p>absolut vodka 25RS</p>
+    <center><img src="https://images-americanas.b2w.io/produtos/01/00/item/129654/2/129654275_1GG.jpg" </center>
     <p>askov (vodka de sabor)5RS</p>
    <p>narguile completo(todas as cores) 100RS</p>
    <p>white horse (cavalo branco) 40RS</p>
