--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ text-align: center
     <p>absolut vodka 25RS</p>
     <center><img src="https://images-americanas.b2w.io/produtos/01/00/item/129654/2/129654275_1GG.jpg" </center>
     <p>askov (vodka de sabor)5RS</p>
+    <center><img src="https://cf.shopee.com.br/file/1962dfcd3d734d32e5dfed3f522cd2b2" </center>
    <p>narguile completo(todas as cores) 100RS</p>
    <p>white horse (cavalo branco) 40RS</p>
    <p>prato separado de narguile (todas as cores e modelos)20RS</p>
