--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ text-align: center
     <center><img src="https://cf.shopee.com.br/file/1962dfcd3d734d32e5dfed3f522cd2b2" </center>
    <p>narguile completo(todas as cores) 100RS</p>
    <p>white horse (cavalo branco) 40RS</p>
+   <center><img src="https://imgs.extra.com.br/1500389507/1xg.jpg?imwidth=500" </center>
    <p>prato separado de narguile (todas as cores e modelos)20RS</p>
    <p>mangueira de narguile (todas as cores e modelos)15RS</p>
    <p>rosh de narguile (todos os modelos e cores)20RS</p>
