--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ text-align: center
     <p>green label 120 RS</p>
     <center><img src="https://img.olx.com.br/images/49/492284924716695.jpg" </center>
     <p>blue label 200RS</p>
-    <center><img src="https://images-americanas.b2w.io/produtos/01/00/item/5829/3/5829305_1GG.jpg" </center>
+    <center><img src="https://www.casadabebida.com.br/img/products/whisky-johnnie-walker-blue-label_2_300.jpg" </center>
     <p>absolut vodka 25RS</p>
     <center><img src="https://m.media-amazon.com/images/I/51Zvj-iHqxL._AC_SY606_.jpg" </center>
     <p>askov (vodka de sabor)5RS</p>
