--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ text-align: center
     <p>askov (vodka de sabor)5RS</p>
     <center><img src="https://cf.shopee.com.br/file/1962dfcd3d734d32e5dfed3f522cd2b2" </center>
    <p>narguile completo(todas as cores) 100RS</p>
+   <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRC5mas_UrTwQq3dXY__3jXprMkUoXOd1eOyg&usqp=CAU"</center>
    <p>white horse (cavalo branco) 40RS</p>
    <center><img src="https://imgs.extra.com.br/1500389507/1xg.jpg?imwidth=500" </center>
    <p>prato separado de narguile (todas as cores e modelos)20RS</p>
