--- a/index.html
+++ b/index.html
@@ -48,21 +48,37 @@ text-align: center
    <p>white horse (cavalo branco) 40RS</p>
    <center><img src="https://imgs.extra.com.br/1500389507/1xg.jpg?imwidth=500" </center>
    <p>prato separado de narguile (todas as cores e modelos)20RS</p>
+   <center><img src="https://images.tcdn.com.br/img/img_prod/1067884/prato_para_narguile_amazon_hookah_evolution_escolha_a_cor_2611_1_60426295fa1f878db8b153237791cc58.png"</center>
    <p>mangueira de narguile (todas as cores e modelos)15RS</p>
+   <center><img src="  </center>
    <p>rosh de narguile (todos os modelos e cores)20RS</p>
+   <center><img src="  </center>
    <P>vaso de narguile (todos os modelos e cores)40RS</P>
+   <center><img src="  </center>
    <p>steam (corpo do narguile) (todos os modelos e cores)50RS</p>
+   <center><img src="  </center>
    <p>cigarro de todas as marcas 5RS</p>
+   <center><img src="  </center>
    <p>juice (essencia de pod e vaper) 10RS</p>
+   <center><img src="  </center>
    <p>vaper sky solo plus 20RS</p>
+   <center><img src="  </center>
    <P>vaper vaporesso 50RS</P>
+   <center><img src="  </center>
    <p>pod descartavel 10RS</p>
+   <center><img src="  </center>
    <p>pod recarregavel 50RS</p>
+   <center><img src="  </center>
    <p>ice drink 1,25RS</p>
+   <center><img src="  </center>
    <p>balinha de troco 5C</p>
+   <center><img src="  </center>
    <p>dichavador 10RS</p>
+   <center><img src="  </center>
    <p>bong 20RS</p>
+   <center><img src="  </center>
    <p>caixinha de seda (25 unidades) 5RS</p>
+   <center><img src="  </center>
    <center><img src="https://images.tcdn.com.br/img/img_prod/553162/seda_smoking_brown_king_size_un_228_1_3f7755756927cd8a197868de731a2617.jpeg"</center>
    <p>abafador para narguile 10RS</p>
    <center><img src="https://s3-sa-east-1.amazonaws.com/files-sc.sigecloud.com.br/Producao/f7404744-0d9d-4b91-9b09-9d8e27c722fd/ImagensProdutos/61e6bebbfe1ad80900ac01ce_800x533.jpeg" </center>
