--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ text-align: center
     <p><stron>green label 120 RS</stron></p>
     <center><img src="https://img.olx.com.br/images/49/492284924716695.jpg" </center>
     <p><strong>blue label 200RS</strong></p>
-    <center><img src="https://www.casadabebida.com.br/img/products/whisky-johnnie-walker-blue-label_2_300.jpg" </center>
+    <center><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDjdxPO2CerDJrDudnnYo-VGhqNpvhKPpkHg&usqp=CAU" </center>
     <p><strong>absolut vodka 25RS</strong></p>
     <center><img src="https://m.media-amazon.com/images/I/51Zvj-iHqxL._AC_SY606_.jpg" </center>
     <p><strong>askov (vodka de sabor)5RS</strong></p>
