--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ text-align: center
    <p><strong>cavalo branco (white horse) 40RS</strong></p>
    <center><img src="https://imgs.extra.com.br/1500389507/1xg.jpg?imwidth=500" </center>
    <p><strong>prato separado de narguile (todas as cores e modelos)20RS</strong></p>
-   <center><img src="https://images.tcdn.com.br/img/img_prod/1067884/prato_para_narguile_amazon_hookah_evolution_escolha_a_cor_2611_1_60426295fa1f878db8b153237791cc58.png"</center>
+   <center><img src="https://http2.mlstatic.com/D_NQ_NP_801337-MLB31657248989_082019-O.webp"</center>
    <p><strong>mangueira de narguile (todas as cores e modelos)15RS</strong></p>
    <center><img src="https://http2.mlstatic.com/D_NQ_NP_610207-MLB43849739676_102020-O.jpg"  </center>
    <p><strong>rosh de narguile (todos os modelos e cores)20RS</strong></p>
